# crabc

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
include/: ctype.h  daemon.h  dn_expand.h  errno.h  fcntl.h  fenv.h  float.h  fnmatch.h  iconv.h  langinfo.h  locale.h  lrand48.h  math.h  nl_types.h  pthread.h  pthread_atfork.h  search.h  semaphore.h  setjmp.h  signal.h  spawn.h  stdio.h  stdlib.h  string.h  strverscmp.h  syscall.h  tgmath.h  time.h  unistd.h  wchar.h  wctype.h
ldso/: Cargo.toml  README.md  build.rs
libc/: Cargo.toml  README.md
libc-test-harness/: .gitignore  README.md  initial-report.txt  run.sh
libc/src/: crypt_impl.rs  daemon.rs  encoding_tables.rs  fenv.rs  lib.rs  locale_ctype.rs  lrand48.rs  math_bitmanip.rs  math_exp.rs  math_helpers.rs  math_hyperbolic.rs  math_hypot.rs  math_invtrig.rs  math_log.rs  math_lrint.rs  math_pow.rs  math_sqrtfmod.rs  math_trig.rs  pthread_atfork.rs  regex.rs  regression_stubs.rs  statvfs.rs  syscall.rs
scripts/: local-ci.sh
src/: loader_core.rs  main.rs
tests/: crypt.rs  ctype.rs  daemon.rs  dn_expand.rs  dso_tls.rs  fenv.rs  fnmatch.rs  iconv.rs  ldso_deps.rs  ldso_interp.rs  ldso_real_binary.rs  ldso_startup.rs  ldso_tls.rs  locale.rs  lrand48.rs  math.rs  net.rs  new_functions.rs  process.rs  pthread.rs  pthread_atfork.rs  setjmp.rs  signal.rs  socket.rs  static_hello.rs  statvfs.rs  stdio_full.rs  stdio_input.rs  stdlib.rs  string.rs  strtol.rs  strverscmp.rs  syscall.rs  tiny_pie.rs  va_list_abi.rs  wave3.rs  wave4.rs  wave5.rs
wave1/: dn_expand.rs  statvfs.h  statvfs.rs  (+1 more)
(+52 files in other folders)
