[workspace]
members = ["ldso", "libc"]

[profile.dev]
panic = "abort"
overflow-checks = false

[profile.release]
panic = "abort"

[package]
name = "crabc"
version = "0.1.0"
edition = "2021"
description = "A Rust musl-compatible libc with a dynamic linker"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mengzhuo/crabc"
readme = "README.md"

[[bin]]
name = "loader"
path = "src/main.rs"
